--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,8 +103,8 @@
     </string-array>
 
     <!-- News fragment values -->
-    <string name="news_title">No titre</string>
-    <string name="news_description">No content</string>
+    <string name="news_title">Sans titre</string>
+    <string name="news_description">Aucun contenu</string>
     <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
 
     <!-- EdtForm values -->
