--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="menu_group_pages">Par AriseID</string>
     <string name="menu_clubs">Itvtube</string>
     <string name="menu_breviaire">Bréviaire</string>
-    <string name="menu_ariseId">AriseId</string>
+    <string name="menu_arise">Arise</string>
     <string name="menu_settings">Paramètres</string>
 
     <!-- Toast messages -->
