Ajout etranger.iiens.net

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="menu_clubs">Itvtube</string>
     <string name="menu_breviaire">Bréviaire</string>
     <string name="menu_arise">Arise</string>
+    <string name="menu_etranger">Partir à l\'étranger</string>
     <string name="menu_settings">Paramètres</string>
     <string name="menu_anniv">Anniversaires</string>
 
